tests/parser/for-statement-loop-expression-error.stderr
error: expected expression
 --> $DIR/for-statement-loop-expression-error.lox:1:10
  |
1 | for c in / {}
  |          ^
